# vista

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  README.md  launch_dino_in.sh  launch_extractions.sh  launch_internvl_ff.sh  launch_pali.sh  launch_qwen_ff.sh  launch_siglip_in.sh  literature.yaml  pyproject.toml  references_verification.yaml  run_leace_gender.sh
.github/workflows/: ci.yml
config/: config.yaml  eval.yaml
config/experiment/: probe_paligemma2_fairface.yaml  sae_dinov3_imagenet.yaml  sae_paligemma2_16x_fairface.yaml  sae_paligemma2_16x_pooled.yaml  sae_paligemma2_4x_pooled.yaml  sae_paligemma2_8x_fairface.yaml  sae_paligemma2_8x_pooled.yaml  sae_paligemma2_imagenet.yaml  sae_qwen2vl_fairface.yaml  sae_qwen3vl_fairface.yaml  sae_siglip2_fairface.yaml  sae_siglip2_imagenet.yaml
config/model/: probe_internvl35.yaml  probe_paligemma2.yaml  probe_qwen3vl.yaml  sae_internvl35.yaml  sae_paligemma2.yaml  sae_paligemma2_16x.yaml  sae_paligemma2_8x.yaml  sae_qwen2vl.yaml  sae_qwen3vl.yaml
config/module/: probe.yaml  sae.yaml
paper/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
paper/sections/: abstract.tex  appendix.tex  discussion.tex  experiments.tex  introduction.tex  method.tex  related.tex
src/: analysis.py  causal_eval.py  cross_encoder.py  data.py  eval.py  evaluation.py  intersectional.py  intervene.py  llm_judge.py  main.py  mechanistic_test.py  report_progress.py  summarize_results.py  utils.py  vlm_generate.py
src/datasets/: __init__.py  fairface.py
src/models/: __init__.py  linear_probes.py  sparse_autoencoder.py
src/modules/: __init__.py  probe.py  sae.py
src/setup_datasets/: sae_latent_dataset.py  ve_latent_dataset.py
tests/: test_causal_eval.py  test_cross_encoder.py  test_intersectional.py  test_models.py  test_modules.py  test_vlm_generate.py
